--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,7 @@
 spring.application.name=homi
-server.port=8089
-spring.datasource.url=jdbc:postgresql://${POSTGRES_HOST}:5432}/${POSTGRES_DATABASE}
-spring.datasource.username=${POSTGRES_USER}
-spring.datasource.password=${POSTGRES_PASSWORD}
+spring.datasource.url=jdbc:postgresql://${PROD_DB_HOST}:${PROD_DB_PORT}/${PROD_DB_NAME}
+spring.datasource.username=${PROD_DB_USER}
+spring.datasource.password=${PROD_DB_PASSWORD}
 
 #create, create-drop, validate, update
 spring.jpa.hibernate.ddl-auto=create
